Fix .star svgs and align .stars elements

--- a/newbie/social-proof-section-master/css/style.css
+++ b/newbie/social-proof-section-master/css/style.css
@@ -31,7 +31,6 @@ h1 {
 .top {
     height: 50%;
     display: flex;
-    align-items: center;
     border: 2px solid black;
 }
 
@@ -39,41 +38,56 @@ h1 {
     border: 2px solid green;
     width: 50%;
     height: 90%;
-    margin-top: -23px;
 }
 
 .stars {
     margin-left: auto;
     border: 1px solid blue;
     width: 45%;
-    height: 70%;
+    height: 60%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 15px;
+    margin: 20px 0 0 auto;
 }
 
 div.mark1,
 div.mark2,
 div.mark3 {
-    border: 1px solid red;
+    box-sizing: border-box;
 }
 
 div.stars1,
 div.stars2,
 div.stars3 {
-    height: 14px;
-    width: 100px;
-    border: 1px dotted black;
-    background: url('../images/icon-star.svg'); 
-    background-size: 15px;
-    
+    height: 15px;
+    width: 85px;
+    /* border: 1px dotted black; */
+    display: flex;
+    justify-content: space-between;
+    margin: 0 25px 0 0;
 }
 
-div.stars1::after,
-div.stars2::after,
-div.stars3::after {
-    white-space: 10px;
+.star {
+    height: 13px;
+    width: 13px;
+    background-image: url('../images/icon-star.svg');
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
+
+.stars__p {
+    color: hsl(300, 43%, 22%);
+    font-weight: 700;
+    margin: 0 15px 0 0;
+
+}
+
+.mark1.stars__p {
+    margin-right: 80px;
+}
+
 
 .bottom {
     display: flex;
@@ -92,12 +106,14 @@ div.stars3::after {
 .stars div.mark2,
 .stars div.mark3 {
     background-color: hsl(300, 24%, 96%);
-    height: 45px;
+    height: 22%;
     width: 85%;
     /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 8px;
+    padding-right: 20px;
 }
 
 .stars div.mark1 {
@@ -106,6 +122,7 @@ div.stars3::after {
 
 .stars div.mark2 {
     align-self: center;
+    padding-left: 23px;
 }
 
 .stars div.mark3 {
